<resources>
    <!--Strings related to the app's name-->
    <string name="app_name">MeetMe</string>
    <string name="copyright">\u00a9 2019 Meet Me</string>

    <!-- Strings related to other activities -->
    <string name="activity_name">Activity</string>
    <string name="date_picker">Date</string>
    <string name="star_time_picker">Start Time</string>
    <string name="end_time_picker">End Time</string>
    <string name="place_picker">Place</string>
    <string name="create_group_button">Create Group</string>
    <string name="add_button">Add Event</string>
    <string name="my_groups_text">My Groups</string>
    <string name="add_members_text">Add Members</string>
    <string name="add_schedule_button">+</string>
    <string name="settings_button">Settings</string>
    <string name="search_text">Search</string>
    <string name="buildings_text">Buildings</string>
    <string name="join_group_button">Join</string>
    <string name="notifications_text">Notifications</string>
    <string name="sounds_text">Sounds</string>
    <string name="version_button">Version</string>
    <string name="profile_picture">User\'s profile picture</string>
    <string name="group_profile_picture">Group\'s profile picture</string>
    <string name="group_name">Group Name</string>
    <string name="group_description">Description</string>
    <string name="private_text">Private</string>
    <string name="join_text">Join Group</string>
    <string name="schedule_text">Event</string>
    <string name="settings_text">Settings</string>
    <string name="update_button">Update Event</string>
    <string name="edit_picture">Choose Picture</string>
    <string name="home">Home</string>
    <string name="my_groups">My Groups</string>
    <string name="settings">Settings</string>
    <string name="drawer_open">Drawer_open</string>
    <string name="drawer_close">Drawer_close</string>
    <string name="back_button_description">Back button</string>
    <string name="upload_button_description">Upload button</string>
    <string name="add_member_description">Add member</string>
    <string name="leave_group_description">Leave group</string>
    <string name="send_chat_description">Send chat</string>
    <string name="suggestion_description">Get Suggestions near me</string>
    <string name="show_members_text">Members</string>
    <string name="chat_message">Message</string>
    <string name="send_chat">Send</string>
    <string name="leave_group">Leave Group</string>
    <string name="create_group_event">Create Group Event</string>
    <string name="chat_sender">Text</string>
    <string name="chat_message_text">TextView</string>

    <!-- Strings related to login and sign up -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_out">Sign out</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="agreement">By clicking Sign Up, you agree to MeetMe\'s User Agreement and Privacy Police.</string>

    <!--String related to google maps API key-->
    <string name="google_maps_key">AIzaSyAc9pTEtLLT5Ftx7fLvi_dqWbCAJnVu1-A</string>

</resources>
