<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/username_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="end"
        android:layout_gravity="end"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:onClick="goBackToMainPageActivity"
            android:text="@string/back_button"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/settings_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="135dp"
            android:layout_marginEnd="40dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/settings_text"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/profile_imageView"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:contentDescription="@string/profile_picture" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/notification_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/notifications_text"/>

        <ToggleButton
            android:id="@+id/notifications_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/sounds_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/sounds_text"/>

        <ToggleButton
            android:id="@+id/sounds_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:textStyle="bold"/>

    </LinearLayout>

    <Button
        android:id="@+id/version_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/version_button"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="goBackToLoginActivity"
        android:text="@string/action_sign_out"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

</LinearLayout>