<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".CreateGroupActivity">

    <TextView
        android:id="@+id/username_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="end"
        android:layout_gravity="end"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageButton
            android:id="@+id/create_group_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:src="@drawable/ic_back"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/create_group_next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="260dp"
            android:onClick="onClick"
            android:src="@drawable/ic_next"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/group_imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/group_profile_picture" />

        <Button
            android:id="@+id/upload_group_picture_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/group_imageView"
            android:background="@android:color/transparent"
            android:hint="@string/edit_picture" />

    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/group_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/group_name"
            android:imeActionId="6"
            android:imeOptions="actionUnspecified"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/group_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/group_description"
            android:imeActionId="6"
            android:imeOptions="actionUnspecified"
            android:inputType="text"
            android:maxLines="5"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/private_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/private_text"/>

        <ToggleButton
            android:id="@+id/private_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="220dp"
            android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>